# kasop

./: Cargo.toml  README.md
.cargo/: config
plugins/cuda/: Cargo.toml
plugins/cuda/src/: lib.rs
plugins/opencl/: Cargo.toml
plugins/opencl/src/: lib.rs  worker.rs
plugins/uart/: Cargo.toml
plugins/uart/resources/async-compat/: Cargo.toml
plugins/uart/resources/async-compat/src/: lib.rs
plugins/uart/resources/logging/: Cargo.toml
plugins/uart/resources/logging/tests/: basic.rs
plugins/uart/resources/svd-build/src/: lib.rs
plugins/uart/resources/tokio-file-unix/: Cargo.toml
plugins/uart/resources/tokio-file-unix/src/: lib.rs
plugins/uart/resources/uio-async/: Cargo.toml
plugins/uart/resources/uio-async/src/: linux.rs
plugins/uart/resources/zynq-io-am1-s9/fpga-io/: Cargo.toml
plugins/uart/src/: lib.rs  system_init.rs  worker.rs
src/: async_i2c.rs  bm1387.rs  cli.rs  command.rs  counters.rs  error.rs  fan.rs  gpio.rs  halt.rs  i2c.rs  io.rs  lib.rs  main.rs  miner.rs  monitor.rs  pow.rs  power.rs  sensor.rs
src/bm1387/: i2c.rs
src/fan/: pid.rs
src/fan/pid/: offset_pid.rs
src/power/: firmware.rs
src/sensor/: tmp42x.rs  tmp451.rs
