[package]
name = "kasop"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["RuFiOx"]
repository = "https://github.com/RuFiOx/kasop.git"
readme = "README.md"
description = "Kaspa $KAS ASIC Miner"
categories = ["command-line-utilities"]
keywords = ["blockchain", "cli", "kaspa", "cryptocurrency", "cryptomining"]
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "proto/**",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[dependencies]
tonic = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.9"
futures-util = "0.3"
tokio-stream = {version = "0.1", features = ["net"]}
once_cell = "1"
num_cpus = "1"
rand = "0.8"
blake2b_simd = "1.0.0"
clap = { version = "3.0", features = ["color", "derive"]}
log = "0.4"
env_logger = "0.9"
keccak = "0.1"
parking = { package = "parking_lot", version = "0.11", optional = true }
shuttle = { version = "0.4.0", optional = true }
libloading = "0.7"
tokio-util = {version = "0.7.0", features = ["codec"]}
serde_json = "1.0"
serde_repr = "0.1"
serde =  {version="1.0", features=["derive"]}
futures = "0.3.21"
bytes = "1.1.0"
async-trait = "0.1"
num = "0.4"
nix = "0.23"
kernel32-sys = "0.2"

[features]
default = ["parking_lot"]
parking_lot = ["parking", "tokio/parking_lot"]
bench = []
no-asm = []

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
tonic-build = { version = "0.6", default-features = false, features = ["prost", "transport"] }
cc = "1"

[dev-dependencies]
sha3 = { git = "https://github.com/elichai/hashes", branch = "cSHAKE" }

[workspace]
members = ["plugins/*"]
default-members = [".", "plugins/uart"]

[patch.crates-io.failure]
path = "plugins/uart/resources/failure"