[package]
name = "kaspauart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kasop = {path = "../../", package="kasop"}
clap = { version = "3.0", features = ["color", "derive"]}
log = "0.4"
env_logger = "0.9"
serialport = "4.0"

uio-async = { path = "resources/uio-async" }
fpga-io-am1-s9 = { path = "resources/zynq-io-am1-s9/fpga-io" }
async-compat = { path = "resources/async-compat" }

failure = "0.1.5"
lazy_static = "1.3"
packed_struct="0.3"
packed_struct_codegen = "0.3"
linux-embedded-hal = { version = "0.2.0" }
sysfs_gpio = { version = "0.5.3" }
chrono = "0.4.9"
async-trait = "0.1.13"
inventory = "0.1.4"
pid_control = "0.7.2"
approx = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
toml = "0.5"
once_cell = "1.2.0"

[lib]
crate-type = ["rlib"]